# hippox

./: Cargo.toml  README.md  README_zh-CN.md
core/: Cargo.toml  README.md  README_zh-CN.md
core/src/: common.rs  config.rs  i18n.rs  lib.rs
core/src/config/: core.rs
core/src/config/instances/: container.rs  database.rs  network.rs
core/src/core/: builder.rs  driver_scheduler.rs  hippox.rs  mod.rs  skill_scheduler.rs  tasks.rs
core/src/executors/: skill_registry.rs  types.rs
core/src/executors/common/: math.rs
core/src/executors/skills/: helloworld.rs  mod.rs
core/src/i18n/: en.toml  zh.toml
core/src/pipeline/: core.rs  detector.rs  intent.rs  types.rs
core/src/prompts/: batch.rs  batch_with_categories.rs  chain.rs  chain_with_categories.rs  driver_md.rs  error_handler.rs  intent_parser.rs  mod.rs  plan_and_execute.rs  plan_and_execute_with_categories.rs  react.rs  react_with_categories.rs  registry.rs  response_formatting.rs  skill_md.rs
core/src/signalbus/: types.rs
core/src/tasks/: api.rs  core.rs  engine.rs  event_bus.rs  executor.rs  mod.rs  types.rs
core/src/workflow/: api.rs  batch.rs  chain.rs  core.rs  mod.rs  plan_and_execute.rs  react.rs  retry.rs  types.rs  utils.rs
hippox-drivers/: Cargo.toml  README.md  README_zh-CN.md
hippox-drivers/src/: executor.rs  lib.rs  signabus.rs  types.rs
hippox-drivers/src/common/: cmd.rs  mem.rs  mod.rs
hippox-drivers/src/drivers/: email.rs  helloworld.rs  mod.rs  scheduled_tasks.rs  speech_speak.rs
hippox-drivers/src/drivers/application_control/: application_control_close.rs  application_control_get_path.rs  application_control_install.rs  application_control_is_running.rs  application_control_launch.rs  application_control_launch_as_admin.rs  application_control_launch_with_args.rs  application_control_list_running.rs  application_control_restart.rs  application_control_uninstall.rs  application_control_wait_for.rs  application_control_wait_for_exit.rs  common.rs  mod.rs
hippox-drivers/src/drivers/audio_control/: audio_control_input_device_list.rs  audio_control_input_volume_set.rs  audio_control_mute.rs  audio_control_output_device_list.rs  audio_control_output_device_set.rs  audio_control_unmute.rs  audio_control_volume_down.rs  audio_control_volume_get.rs  audio_control_volume_set.rs  audio_control_volume_up.rs  mod.rs
hippox-drivers/src/drivers/blockchain/: wallet.rs
hippox-drivers/src/drivers/bluetooth/: bluetooth_adapter_status.rs  bluetooth_audio_connect.rs  bluetooth_audio_disconnect.rs  bluetooth_auto_connect_toggle.rs  bluetooth_battery_get.rs  bluetooth_ble_notify.rs  bluetooth_ble_read.rs  bluetooth_ble_write.rs  bluetooth_confirm_pin.rs  bluetooth_connect.rs  bluetooth_delete_device.rs  bluetooth_device_info.rs  bluetooth_disconnect.rs  bluetooth_firmware_version.rs  bluetooth_get_connected_devices.rs  bluetooth_get_mac_address.rs  bluetooth_hid_connect.rs  bluetooth_le_advertise_start.rs  bluetooth_le_advertise_stop.rs  bluetooth_le_scan_filter.rs  bluetooth_list_paired.rs  bluetooth_pair.rs  bluetooth_pairable.rs  bluetooth_priority_set.rs  bluetooth_profile_list.rs  bluetooth_receive_file.rs  bluetooth_reject_pairing.rs  bluetooth_rename_device.rs  bluetooth_rssi_get.rs  bluetooth_scan.rs  bluetooth_scan_services.rs  bluetooth_send_file.rs  bluetooth_serial.rs  bluetooth_set_device_name.rs  bluetooth_set_discoverable_timeout.rs  bluetooth_set_receive_directory.rs  bluetooth_trust_device.rs  bluetooth_turn_off.rs  bluetooth_turn_on.rs  bluetooth_unpair.rs  (+2 more)
hippox-drivers/src/drivers/cryptography/: aes_decrypt.rs  aes_encrypt.rs  base64_decode.rs  base64_encode.rs  common.rs  generate_password.rs  generate_random.rs  generate_uuid.rs  hash_hmac.rs  hash_md5_text.rs  hash_sha256_text.rs  hash_sha512_text.rs  mod.rs  password_hash.rs  password_verify.rs  rsa_decrypt.rs  rsa_encrypt.rs  rsa_sign.rs  rsa_verify.rs
hippox-drivers/src/drivers/database/: mysql.rs  postgresql.rs  redis.rs  sqlite.rs
hippox-drivers/src/drivers/devops/: docker.rs  github.rs  k8s.rs
hippox-drivers/src/drivers/display_control/: common.rs  display_control_brightness_get.rs  display_control_brightness_set.rs  display_control_list.rs  display_control_orientation_get.rs  display_control_orientation_set.rs  display_control_primary_get.rs  display_control_refresh_rate_get.rs  display_control_resolution_get.rs  display_control_resolution_set.rs  display_control_scale_get.rs  mod.rs
hippox-drivers/src/drivers/document/: csv.rs  docx.rs  excel.rs  html.rs  json.rs  markdown.rs  opendoc.rs  pdf.rs  pptx.rs  text.rs  toml.rs  xml.rs  yaml.rs
hippox-drivers/src/drivers/file/: archive.rs  copy.rs  delete.rs  disk_forensic.rs  hash.rs  integrity.rs  list.rs  log_pack.rs  read.rs  signature.rs  virus_scan.rs  write.rs
hippox-drivers/src/drivers/finance/: mod.rs  ohlcv_generator.rs
hippox-drivers/src/drivers/have_head_browser/: have_head_browser_back.rs  have_head_browser_click.rs  have_head_browser_close.rs  have_head_browser_element_exists.rs  have_head_browser_execute_js.rs  have_head_browser_find_element.rs  have_head_browser_forward.rs  have_head_browser_get_text.rs  (+12 more)
hippox-drivers/src/registry/: application_register.rs  audio_register.rs  basic_register.rs  blockchain_register.rs  bluetooth_register.rs  browser_register.rs  core.rs  cryptography_register.rs  database_register.rs  devops_register.rs  display_register.rs  document_register.rs  email_register.rs  file_register.rs  finance_register.rs  keyboard_register.rs  math_register.rs  media_register.rs  mod.rs  mouse_register.rs  network_register.rs  operating_system_basis_register.rs  operating_system_cpu_register.rs  operating_system_disk_register.rs  operating_system_gpu_register.rs  operating_system_memory_register.rs  operating_system_process_register.rs  operating_system_register.rs  operating_system_security_register.rs  operating_system_services_register.rs  scheduled_tasks_register.rs  socialplatform_register.rs  speech_speak_register.rs  terminal_register.rs  text_register.rs  time_register.rs  types.rs  wifi_register.rs  window_register.rs
(+1016 files in other folders)
