[package]
name = "hippox"
version = "0.1.2"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "The most reliable AI agent.🦛"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/hippox"

[dependencies]
langhub = "0.2.2"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-i18n = "4.0.0"
once_cell = "1.21.4"
toml = "1.1.2"
walkdir = "2.5.0"
serde_json = "1.0.149"
async-trait = "0.1.89"
reqwest = "0.13.3"
sysinfo = "0.38.4"
chrono = "0.4.44"

[dev-dependencies]
tempfile = "3.27.0"
