[package]
name = "hippox"
version = "0.5.6"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "🦛A reliable, autonomous LLM runtime and skill orchestration engine, Capable of processing natural language and automatically executing OS-native atomic skills, fundamentally enabling the LLM to truly take over the computer."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/hippox"
keywords = ["ai", "agent", "llm", "skills", "skills-orchestration"]
exclude = ["assets/", "examples/", "templates/", "hippox-atomic-skills/"]

[dependencies]
hippox-atomic-skills = { path = "../hippox-atomic-skills", features = ["all"] }
langhub = "0.3.2"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-i18n = "4.0.0"
once_cell = "1.21.4"
toml = "1.1.2"
walkdir = "2.5.0"
serde_json = "1.0.149"
async-trait = "0.1.89"
reqwest = { version = "0.13.3", features = ["json"] }
sysinfo = "0.38.4"
chrono = "0.4.44"
csv = "1.4.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }
calamine = "0.35.0"
rust_xlsxwriter = "0.95.0"
lettre = { version = "0.11.22", features = [
    "smtp-transport",
    "tokio1-native-tls",
    "builder",
] }
suppaftp = "8.0.3"
base64 = "0.22.1"
hex = "0.4.3"
deadpool-postgres = "0.14.1"
urlencoding = "2.1"
clipboard-win = "5.4.1"
cron = "0.16.0"
pdf-extract = "0.10.0"
md5 = "0.8.0"
sha2 = "0.11.0"
lopdf = "0.40.0"
rand = { version = "0.10.1", features = ["std_rng"] }
uuid = { version = "1.23.1", features = ["v4"] }
zip = "8.6.0"
bzip2 = "0.6.1"
flate2 = "1.1.9"
futures = "0.3.32"
regex = "1.12.4"

[dev-dependencies]
tempfile = "3.27.0"
dotenvy = "0.15"
