[package]
name = "hippox"
version = "0.5.6"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "🦛A reliable, autonomous LLM runtime and skill orchestration engine, Capable of processing natural language and automatically executing OS-native atomic skills, fundamentally enabling the LLM to truly take over the computer."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/hippox"
keywords = ["ai", "agent", "llm", "skills", "skills-orchestration"]
exclude = ["assets/", "examples/", "templates/", "hippox-atomic-skills/"]

[dependencies]
langhub = "0.3.2"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.32"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.149"
async-trait = "0.1.89"
uuid = "1.23.3"
once_cell = "1.21.4"
tracing = "0.1.44"
toml = "1.1.2"
hippox-atomic-skills = "0.1.0"
regex = "1.12.4"

[dev-dependencies]
tempfile = "3.27.0"
dotenvy = "0.15"
