[package]
name = "hippox-drivers"
version = "0.3.2"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "🦛All indivisible atomic driver units in Hippox."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/hippox/tree/main/hippox-drivers"
keywords = ["ai", "agent", "llm", "skills", "skills-orchestration"]

[dependencies]
langhub = "0.3.2"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-i18n = "4.0.0"
once_cell = "1.21.4"
toml = "1.1.2"
walkdir = "2.5.0"
serde_json = "1.0.149"
async-trait = "0.1.89"
reqwest = { version = "0.13.3", features = ["json", "stream", "multipart"] }
sysinfo = "0.38.4"
chrono = "0.4.44"
csv = "1.4.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }
calamine = "0.35.0"
rust_xlsxwriter = "0.95.0"
lettre = { version = "0.11.22", features = [
    "smtp-transport",
    "tokio1-native-tls",
    "builder",
] }
suppaftp = "8.0.3"
base64 = "0.22.1"
hex = "0.4.3"
redis = "1.2.1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "json",
    "uuid",
] }
deadpool-postgres = "0.14.1"
urlencoding = "2.1"
clipboard-win = "5.4.1"
cron = "0.16.0"
pdf-extract = "0.10.0"
md5 = "0.8.0"
lopdf = "0.40.0"
rand = { version = "0.10.1", features = ["std_rng"] }
uuid = { version = "1.23.1", features = ["v4"] }
zip = "8.6.0"
bzip2 = "0.6.1"
flate2 = "1.1.9"
tar = "0.4.45"
image = "0.25.10"
regex = "1.12.3"
trust-dns-resolver = "0.23.2"
trust-dns-proto = "0.23.2"
whois-rust = "1.6.0"
local-ip-address = "0.6.13"
similar = "3.1.0"
futures = "0.3.32"
windows-sys = "0.61.2"
winapi = { version = "0.3.9", features = [
    "tlhelp32",
    "psapi",
    "memoryapi",
    "processthreadsapi",
    "handleapi",
    "winnt",
    "errhandlingapi",
    "synchapi",
    "winuser",
] }
evm-client = "0.1.7"
ethers = "2.0.14"
scraper = "0.27.0"
headless_chrome = "1.0.22"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }
widestring = "1.0"
xcap = "0.9.6"
tempfile = "3.27.0"
sha1 = "0.11.0"
blake3 = "1.8.5"
aes = "0.9.1"
aes-gcm = "0.10.3"
hmac = "0.13.0"
password-hash = "0.6.1"
pbkdf2 = "0.13.0"
bcrypt = "0.19.2"
argon2 = "0.5.3"
cbc = "0.2.1"
pkcs8 = "0.11.0"

digest = "0.10.7"
signature = "2.2.0"
rand_core = "0.6.4"
ring = "0.17.14"
pem = "3.0.6"
rsa = "0.9.10"
sha2 = "0.11.0"
getrandom = "0.4.2"
kamadak-exif = "0.6.1"
rqrr = "0.10.1"
qrcode = "0.14.1"
barcoders = "2.0.0"
ssh2 = "0.9.5"
raw-cpuid = "11.6.0"
nix = "0.31.3"

[features]
default = [
    "blockchain",
    "database",
    "devops",
    "document",
    "file",
    "helloworld",
    "math",
    "media",
    "social_platform",
    "network",
    "operating_system_basis",
    "task",
    "time",
    "text",
    "have_head_browser",
    "terminal_commands",
    "window_control",
    "speech_speak",
    "keyboard_control",
    "mouse_control",
    "audio_control",
    "application_control",
    "display_control",
    "wifi",
    "bluetooth",
    "email",
    "cryptography",
    "operating_system_services",
    "operating_system_security",
    "scheduled_tasks",
    "operating_system_process",
    "operating_system_memory",
    "operating_system_cpu",
    "operating_system_gpu",
    "operating_system_disk",
]
all = [
    "blockchain",
    "database",
    "devops",
    "document",
    "file",
    "helloworld",
    "math",
    "media",
    "social_platform",
    "network",
    "operating_system_basis",
    "task",
    "time",
    "text",
    "have_head_browser",
    "terminal_commands",
    "window_control",
    "speech_speak",
    "keyboard_control",
    "mouse_control",
    "audio_control",
    "application_control",
    "display_control",
    "wifi",
    "bluetooth",
    "email",
    "cryptography",
    "operating_system_services",
    "operating_system_security",
    "scheduled_tasks",
    "operating_system_process",
    "operating_system_memory",
    "operating_system_cpu",
    "operating_system_gpu",
    "operating_system_disk",
]
operating_system_disk = []
operating_system_gpu = []
operating_system_cpu = []
operating_system_memory = []
scheduled_tasks = []
operating_system_basis = []
operating_system_process = []
operating_system_security = []
operating_system_services = []
cryptography = []
email = []
bluetooth = []
wifi = []
display_control = []
keyboard_control = []
mouse_control = []
audio_control = []
application_control = []
speech_speak = []
window_control = []
have_head_browser = []
blockchain = []
text = []
database = []
devops = []
document = []
file = []
helloworld = []
math = []
media = []
social_platform = []
network = []
task = []
time = []
terminal_commands = []
